# december

./: .cspell.json  .dockerignore  .editorconfig  .env.example  .eslintignore  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DESIGN.md  Justfile  LICENSE  Makefile  PLAN.md  PRODUCT.md  README.md  SECURITY.md  cliff.toml  codes.md  eslint.config.js  feedback.md  git_diff.txt  knip.jsonc  package.json  phase3.md  runtime.md  test-schema.ts  test_bulletproof.ts  test_error.ts  test_json.ts  test_regex.ts  (+4 more)
.changeset/: clear-horses-rush.md  wise-bananas-divide.md
.december/: .decemberignore  AGENTS.md  DECEMBER.md  config.toml  mcp.json  rules.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.husky/: post-merge  pre-push
Python/: _python.md
cli/: Cargo.toml  package.json  tsconfig.json
cli-ui/: index.html  package-lock.json  package.json
core/: package.json
december-cli/: .gitignore  Cargo.toml
runtime/: Cargo.toml  package.json
runtime/src/: actor.rs  backend.rs  config.rs  error.rs  main.rs  manifest.rs  registry.rs  sandbox.rs  state.rs  storage.rs  workspace.rs
runtime/src/actors/: mod.rs  preview.rs  registry.rs
runtime/src/app/: config.rs  mod.rs  state.rs
runtime/src/domain/: error.rs  manifest.rs  mod.rs
runtime/src/http/: mod.rs
runtime/src/sandboxes/: docker.rs  mod.rs
runtime/src/services/: backend.rs  mod.rs  storage.rs  workspace.rs
server/: db.ts  (+13 more)
(+1247 files in other folders)
