[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.11"
aws-sdk-s3 = "1.112.0"
axum = "0.8.6"
bollard = "0.19.3"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
